2007-08-16 Aaron Faupell <afaupell@users.sourceforge.net>

        * nmea.tcl fixed bug in read_port when using logging,
        bug id 1765388

2007-05-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* nmea.man: Added title, extended set of keywords.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* nmea.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-06-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* nmea.man: Fixed syntax errors in the documentation.

2006-06-30 Aaron Faupell <afaupell@users.sourceforge.net>

	* New module for handling NMEA protocol