@@ -1,2 +1,2 @@
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded nmea 0.1 [list source [file join $dir nmea.tcl]]
+package ifneeded nmea 0.1.1 [list source [file join $dir nmea.tcl]]
